<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.cabinrental.MainActivity">

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <ImageView
        android:id="@+id/imgSail"
        android:layout_width="220dp"
        android:layout_height="200dp"
        android:contentDescription="@string/imgCabin"
        android:src="@drawable/cabin" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow android:layout_width="wrap_content">
            <View android:layout_height="40dp" />
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:background="#B0C4DE"
                android:gravity="fill_horizontal"
                android:padding="20dp"
                android:text="@string/txtTitle"
                android:textSize="30sp"
                android:typeface="serif" />
        </TableRow>
        <TableRow>
            <View android:layout_height="40dp" />
            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_gravity="left"
                android:padding="20dp"
                android:text="@string/txtDescription"
                android:textSize="20sp" />
        </TableRow>
        <TableRow>
            <View android:layout_height="40dp" />
            <Button
                android:id="@+id/btnDate"
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/btnDate"
                android:textSize="30sp" />
        </TableRow>
        <TableRow>
            <View android:layout_height="40dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/btnCabin1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnCabin1" />

                <RadioButton
                    android:id="@+id/btnCabin2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnCabin2" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View android:layout_height="40dp" />

            <TextView
                android:id="@+id/txtReservation"
                android:layout_gravity="center"
                android:padding="20dp"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>
</RelativeLayout>



